feat: ESlintとRustコンパイルの対応

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,8 @@ temp/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
 .idea
 *.suo
 *.ntvs*
