--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ rayon = "1.8"
 chardet = "0.2"
 log = "0.4"
 env_logger = "0.10"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 regex = "1.10"
 dirs = "5.0"
 uuid = { version = "1.6", features = ["v4"] }
