refactor: ユーザーに見える箇所をCleaに名称変更

--- a/app/src-tauri/.env.example
+++ b/app/src-tauri/.env.example
@@ -1,4 +1,4 @@
-# CSV Light Editor - AI Configuration
+# Clea - AI Configuration
 # Copy this file to .env and configure as needed
 
 # ============================================================
